--- a/src/about.html
+++ b/src/about.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nordatech.com.ng | Welcome</title>
+		<title>Nordatech.com.ng | About</title>
 	</head>
 	<body>
 		<div class="container py-4 px-3 mx-auto">
-			<h1>Hello, Bootstrap and Vite!</h1>
+			<h1>About Page</h1>
 			<button class="btn btn-success">Success button</button>
 		</div>
 		<script type="module" src="/js/main.js"></script>
