--- a/src/about.html
+++ b/src/about.html
@@ -201,7 +201,7 @@
 
     <section class="contact py-5">
       <div class="container py-5">
-        <div class="row py-4 justify-content-center align-items-center ">
+        <div class="row py-4 justify-content-center align-items-center gap-4 gap-md-0">
           <div class="col-md-5 px-md-5">
             <img
               src="https://i.ibb.co/QYQLxGD/african-american-woman-works-call-center-operator-customer-service-agent-wearing-microphone-headsets.jpg"
