--- a/src/service.html
+++ b/src/service.html
@@ -1,16 +1,451 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nordatech.com.ng | Services</title>
-	</head>
-	<body>
-		<div class="container py-4 px-3 mx-auto">
-			<h1>Services Page</h1>
-			<button class="btn btn-success">Success button</button>
-		</div>
-		<script type="module" src="/js/main.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Nordatech.com.ng | Services</title>
+</head>
+
+<body>
+	<header>
+		<nav class="navbar navbar-expand-lg bg-white">
+			<div class="container">
+				<!-- The navbar logo and site name -->
+				<a class="navbar-brand" href="#">
+					<img src="./img/logo.svg" alt="NordaTech Logo" class="w-25" />
+				</a>
+				<!-- Button to toggle navigation menu on smaller screens -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<!-- Navigation links -->
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto gap-lg-4">
+						<li class="nav-item">
+							<a class="nav-link" href="./index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link  " href="./about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-success active fw-medium" href="./service.html">Service</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="./contact.html">Contact Us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<main>
+		<section class="hero-service d-grid align-items-center">
+			<div class="container">
+				<h1 class="d-grid text-white">
+					<span>
+						WHAT WE CAN DO FOR YOU
+
+					</span>
+					<span class="d-flex align-items-center"> NORDATECH ENERGY
+						<svg width="60" height="45" viewBox="0 0 100 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M41.3341 50.6667H29.3341L42.6674 32.0001L29.3341 13.3334H41.3341L54.6674 32.0001L41.3341 50.6667Z"
+								fill="white" />
+							<path
+								d="M22.6674 50.6667H10.6674L24.0008 32.0001L10.6674 13.3334H22.6674L36.0008 32.0001L22.6674 50.6667Z"
+								fill="#48DE4E" />
+							<path
+								d="M77.3341 50.6667H65.3341L78.6674 32.0001L65.3341 13.3334H77.3341L90.6674 32.0001L77.3341 50.6667Z"
+								fill="white" />
+							<path
+								d="M58.6674 50.6667H46.6674L60.0008 32.0001L46.6674 13.3334H58.6674L72.0008 32.0001L58.6674 50.6667Z"
+								fill="#48DE4E" />
+						</svg></span>
+				</h1>
+				<p class="w-50 text-white">
+					Empowering Change Through Eco-Conscious Services: Your Partner in Sustainable Solutions
+				</p>
+			</div>
+		</section>
+
+		<section class="py-5">
+			<div class="container py-5">
+				<h2 class="text-center text-success">Our Services</h2>
+				<div class="row py-4 gap-3 gap-md-0">
+
+					<!----------- left side  ---------------->
+
+
+					<div class="col-md-6 px-md-2">
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">PRODUCTION SOLUTION</h6>
+							<span class="fw-medium d-block  ">WELL TESTING AND INTERVENTION PROTOCOLS</span>
+							<span class="d-block ">
+								> Well Test
+							</span>
+							<span class="d-block ">
+								> Drill Stem Test (DST)
+							</span>
+							<span class="d-block ">
+								> Pressure Build-Up Test
+							</span>
+							<span class="d-block ">
+								> Drawdown Test
+							</span>
+							<span class="d-block ">
+								> Reservoir and Matrix Stimulation - Matrix Acidising
+							</span>
+							<span class="d-block ">
+								> Sand Screening
+							</span>
+							<span class="d-block ">
+								> Descaling of Production Tubing and Wax Removal
+							</span>
+							<span class="d-block ">
+								> Nitrogen Injection Completions and Workover Operations
+							</span>
+							<span class="d-block ">
+								> Fishing Expedition
+							</span>
+							<span class="d-block ">
+								> Perforations
+							</span>
+							<span class="d-block ">
+								> Formation Evalution
+							</span>
+							<span class="d-block ">
+								> Flow Management
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">DRILLING FLUIDS SERVICES</h6>
+							<span class="d-block ">
+								> Sustainable Drilling fluids formation
+							</span>
+							<span class="d-block ">
+								> Supply of drilling fluids additives
+							</span>
+							<span class="d-block ">
+								> Rheological properties characterisation
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">PROJECT MANAGEMENT</h6>
+							<span class="d-block mb-4 ">Timely delivery of projects is quintessential to the reputation
+								of a company. Our project management solutions ensure that projects are executed within
+								a reasonable timeframe and allotted budget with a framework which includes
+								contingencies.</span>
+							<span class="d-block">
+								Key competencies in our project management solutions are:
+							</span>
+							<span class="d-block ">
+								> Quality improvement
+							</span>
+							<span class="d-block ">
+								> Reducing the risk of project failures
+							</span>
+							<span class="d-block ">
+								> Increasing efficiency
+							</span>
+							<span class="d-block ">
+								> Synergy through multifaceted collaboration
+							</span>
+							<span class="d-block ">
+								> Improving communication
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">FACILITY MANAGEMENT</h6>
+							<span class="d-block ">
+								Some of the Facilities Management Services we offer are:
+							</span>
+							<span class="d-block ">
+								> Deliver business continuity and workforce projection through upholding our HSE
+								policies.
+							</span>
+							<span class="d-block ">
+								> Delivery of effective management of any organisation's assets
+							</span>
+							<span class="d-block ">
+								> Aid in the integration of processes associated with retrofit operations, change in
+								management, merger, or acquisition.
+							</span>
+							<span class="d-block ">
+								> Maximise the lifetime of key operational assets within the facility.
+							</span>
+							<span class="d-block ">
+								> Cleaning of Tanks, Test Separator, Pipes & platform
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">FRONT END ENGINEERING DESIGN (FEED)</h6>
+							<span class="d-block ">
+								> Safety and Control Systems values
+							</span>
+							<span class="d-block ">
+								> Installation Procedures
+							</span>
+							<span class="d-block ">
+								> Preparation of Engineering, Procurement, Construction (EPC) tender document
+							</span>
+							<span class="d-block ">
+								> Design Specification and Verification
+							</span>
+							<span class="d-block ">
+								> Cost and weight estimation
+							</span>
+							<span class="d-block ">
+								> Equipment sizing
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">IT SERVICE</h6>
+							<span class="d-block ">
+								We strive to solve complex organisational performance
+								problems using IT by providing services such as:
+							</span>
+							<span class="d-block ">
+								> Business and Systems Integration
+							</span>
+							<span class="d-block ">
+								> IT advisory services
+							</span>
+							<span class="d-block ">
+								> IT support Services/Training
+							</span>
+							<span class="d-block ">
+								> Software Development
+							</span>
+						</div>
+					</div>
+
+
+
+					<!--------------- Right side  --------------->
+
+					<div class="col-md-6 px-md-3">
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">
+								CONSULTING SERVICES</h6>
+							<span class="d-block ">
+								Our consultancy services extend to serval areas such as:
+							</span>
+							<span class="d-block ">
+								> Engineering Services
+							</span>
+							<span class="d-block ">
+								> Business Management
+							</span>
+							<span class="d-block ">
+								> Resource Sourcing
+							</span>
+							<span class="d-block ">
+								> Acquisitions and Partnerships
+							</span>
+							<span class="d-block ">
+								> Human Capital Development and Trainings
+							</span>
+						</div>
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">RESERVOIR MANAGEMENT</h6>
+							<span class="d-block ">
+								FIELD DEVELOPMENT SERVICES & OPTIMISATION
+							</span>
+							<span class="d-block ">
+								> Provision of Field Development Plan (FDP), Optimisation, and Prediction.
+							</span>
+							<span class="d-block ">
+								> Generating FDP reports
+							</span>
+							<span class="d-block ">
+								> Evaluation of Reservoir Geology
+							</span>
+							<span class="d-block ">
+								> Special Core Analysis (SCAL) and reservoir rock characterisation
+							</span>
+							<span class="d-block ">
+								> Reservoir Modelling
+							</span>
+							<span class="d-block ">
+								> Reserve Estimation
+							</span>
+							<span class="d-block ">
+								> Aquifer Modelling
+							</span>
+							<span class="d-block ">
+								> History Matching
+							</span>
+							<span class="d-block ">
+								> Well modelling
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">
+								RESEARCH & DEVELOPMENT</h6>
+							<span class="d-block ">
+								Alternative drilling mud additives for environmental sustainability
+							</span>
+							<span class="d-block ">
+								> Carbon Management
+							</span>
+							<span class="d-block ">
+								> GHG Emissions Accounting
+							</span>
+							<span class="d-block ">
+								> Enhanced Oil Recovery
+							</span>
+							<span class="d-block ">
+								> Enhanced Gas Recovery
+							</span>
+							<span class="d-block ">
+								> Renewable Energy
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">
+								QUALITY MANAGEMENT</h6>
+							<span class="d-block mb-2">
+								To ensure we provide high quality services to our customers, our Quality Management
+								Solutions adopt a strict quality compliance akin to industry standards using certified
+								and compliant resources.
+							</span>
+							<span class="d-block ">
+								These resources include Audit Services and Maintenance Management Services. These
+								resources enable our customers carry out audits on business system processes necessary
+								for compliance with industry standards and equipment in good working condition with
+								preventive maintenance
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">
+								CONSTRUCTION</h6>
+
+							<span class="d-block ">
+								> Construction of temporary camps
+							</span>
+							<span class="d-block ">
+								> Well site and platform operations
+							</span>
+							<span class="d-block ">
+								> Construction and optimisation/retrofitting Oil and Gas processing and handling plants
+							</span>
+							<span class="d-block ">
+								> Laying of different sized diameter pipelines
+							</span>
+							<span class="d-block ">
+								> Fabrication and construction of onshore and offshore structures
+							</span>
+							<span class="d-block ">
+								> Construction of plants
+							</span>
+						</div>
+
+						<div class="bg-secondary  p-4 rounded-4 mb-3">
+							<h6 class="fs-5 text-success mb-4">
+								PROCUREMENT</h6>
+							<span class="d-block mb-2">
+								As procurement is a fundamental part of EPC projects, integrating it into most oil and
+								gas projects is pragmatic and economical.
+							</span>
+							<span class="d-block ">
+								We handle all facets of the oil and gas EPC projects' supply chain. From the request for
+								quotations for the contracts to the contract close are all managed by our in-house
+								procurement professionals. This encompasses bids evaluations, tender support, audits,
+								and supplier selections for consistent delivery
+							</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!------------- Clients and Partners  ------------>
+
+		<section class="clients py-5 bg-secondary rounded-6">
+			<div class="container">
+				<h2 class="text-center text-success mb-5">
+					OUR CLIENTS AND PARTNERS
+				</h2>
+				<div class="row py-4 justify-content-center align-items-center  gap-5 gap-md-4">
+					<div class="col-md-2 px-md-2 pb-md-5 ">
+						<img src="./img/intelbox.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2  px-md-2 pb-md-5">
+						<img src="./img/fleissen.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/vision.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/nnpc.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/natquest.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/naseni.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/slb.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/corelab.png" alt="intelbox" class="w-100 " />
+					</div>
+					<div class="col-md-2 px-md-2 pb-md-5">
+						<img src="./img/dit.png" alt="intelbox" class="w-100 " />
+					</div>
+				</div>
+		</section>
+
+		<!------------------ Contact  ---------------->
+
+		<section class="contact py-5">
+			<div class="container py-5">
+				<div class="row py-4 justify-content-center align-items-center gap-4 gap-md-0">
+					<div class="col-md-5 px-md-5">
+						<img src="https://i.ibb.co/QYQLxGD/african-american-woman-works-call-center-operator-customer-service-agent-wearing-microphone-headsets.jpg"
+							alt="african-american-woman-works-call-center-operator-customer-service-agent-wearing-microphone-headsets"
+							class="w-100 rounded-6 " />
+					</div>
+					<div class="col-md-6 px-md-5 ">
+						<p>Feel free to reach out to use uing the contact information. Your inquiries are important to
+							us, and we're
+							here to assist you in any way we can.</p>
+						<form class="bg-secondary p-5 rounded-5 shadow d-flex flex-column ">
+							<div class="mb-3">
+								<label for="name" class="form-label label-text">Name</label>
+								<input type="text" class="input-box form-control border-0" id="name" name="name"
+									required>
+							</div>
+							<div class="mb-3">
+								<label for="email" class="form-label label-text">Email</label>
+								<input type="email" class="input-box form-control" id="email" name="email" required>
+							</div>
+							<div class="mb-3">
+								<label for="message" class="form-label label-text">Message</label>
+								<input type="text" class="input-box form-control" id="message" name="message" required>
+							</div>
+							<button class="btn btn-success-alt mx-auto  px-5 my-2">Submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</section>
+	</main>
+	<script type="module" src="/js/main.js"></script>
+</body>
+
 </html>
