--- a/src/index.html
+++ b/src/index.html
@@ -141,6 +141,56 @@
 					</div>
 				</div>
 			</section>
+			<footer class="text-white">
+				<div class="container py-5">
+					<div class="container">
+						<div class="row">
+						  <div class="col-lg-6">
+							<div class="mb-4">
+
+							  <div class="contact-info">
+								<div>
+									<p class="address">
+										4th Floor, Lanre Shittu Motors Building,<br>
+										Plot 1504, Shehu Yaradua Way, Mabushi, Abuja.
+									  </p>
+								</div>
+								<div>
+									<p class="phone">
+										<svg width="21" height="26" viewBox="0 0 21 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+										  <!-- Phone icon SVG path -->
+										</svg>
+										+234(0)8037380109, +234(0)7081752638
+									  </p>
+								</div>
+								<div>
+									
+								</div>
+
+							  </div>
+							</div>
+						  </div>
+						  <div class="col-lg-6">
+							<div class="mb-4">
+							  <h5>Quick Links</h5>
+							  <ul class="list-unstyled">
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Contact Us</a></li>
+							  </ul>
+							</div>
+						  </div>
+						</div>
+					  </div>
+	
+				  <div class="reserve row">
+					<div class="">
+					  <p>&copy; 2023 All rights reserved Nordatech Energy LTD</p>
+					</div>
+				  </div>
+				</div>
+			  </footer>
+			  
 		</main>
 		<script type="module" src="/js/main.js"></script>
 	</body>
