--- a/src/contact.html
+++ b/src/contact.html
@@ -1,16 +1,381 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nordatech.com.ng | Contact</title>
-	</head>
-	<body>
-		<div class="container py-4 px-3 mx-auto">
-			<h1>Contact Page</h1>
-			<button class="btn btn-success">Success button</button>
-		</div>
-		<script type="module" src="/js/main.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Nordatech.com.ng | Contact</title>
+</head>
+
+<body>
+	<header>
+		<nav class="navbar navbar-expand-lg bg-white">
+			<div class="container">
+				<!-- The navbar logo and site name -->
+				<a class="navbar-brand" href="#">
+					<img src="./img/logo.svg" alt="NordaTech Logo" class="w-25" />
+				</a>
+				<!-- Button to toggle navigation menu on smaller screens -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<!-- Navigation links -->
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto gap-lg-4">
+						<li class="nav-item">
+							<a class="nav-link" href="./index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link " href="./about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="./service.html">Service</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-success active fw-medium" href="./contact.html">Contact Us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<main>
+		<section class="hero-contact d-grid align-items-center">
+			<div class="container">
+				<h1 class="d-grid text-white">
+					<span class="d-flex align-items-center">
+						STAY CONNECTED
+						<svg width="60" height="45" viewBox="0 0 100 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M41.3341 50.6667H29.3341L42.6674 32.0001L29.3341 13.3334H41.3341L54.6674 32.0001L41.3341 50.6667Z"
+								fill="white" />
+							<path
+								d="M22.6674 50.6667H10.6674L24.0008 32.0001L10.6674 13.3334H22.6674L36.0008 32.0001L22.6674 50.6667Z"
+								fill="#48DE4E" />
+							<path
+								d="M77.3341 50.6667H65.3341L78.6674 32.0001L65.3341 13.3334H77.3341L90.6674 32.0001L77.3341 50.6667Z"
+								fill="white" />
+							<path
+								d="M58.6674 50.6667H46.6674L60.0008 32.0001L46.6674 13.3334H58.6674L72.0008 32.0001L58.6674 50.6667Z"
+								fill="#48DE4E" />
+						</svg>
+					</span>
+					<span> NORDATECH ENERGY </span>
+				</h1>
+				<p class="w-50 text-white">
+					Connecting for a Sustainable Future: Reach Out and Join the Green Converstion
+				</p>
+			</div>
+		</section>
+
+		<section class="py-5 position-relative  ">
+			<div class="container py-5">
+				<h2 class="text-center text-success mb-3">Contact Us</h2>
+				<p class="text-center mb-3">
+					Feel free to reach out to us using the following contact information.
+					<span class="d-block ">
+						Your inquiries are important to us, and we are here to assist you in any way we
+						can.
+					</span>
+				</p>
+
+				<div class="row py-4 justify-content-center align-items-center gap-5 gap-md-0">
+					<div class="col-md-6 px-md-5 ">
+						<form class="bg-body-secondary  py-5 px-3  rounded-5 shadow d-flex flex-column ">
+							<div class="mb-3">
+								<label for="name" class="form-label label-text">Name</label>
+								<input type="text" class="input-box form-control border-0" id="name" name="name"
+									required>
+							</div>
+							<div class="mb-3">
+								<label for="email" class="form-label label-text">Email</label>
+								<input type="email" class="input-box form-control" id="email" name="email" required>
+							</div>
+							<div class="mb-3">
+								<label for="message" class="form-label label-text">Message</label>
+								<input type="text" class="input-box form-control" id="message" name="message" required>
+							</div>
+							<button class="btn btn-success-alt mx-auto  px-5 my-2">Submit</button>
+						</form>
+					</div>
+
+					<div class="col-md-6 px-md-5">
+						<div class="mb-3">
+							<h6 class="fs-5 text-success mb-1">Call Us</h6>
+							<p class="mb-1">
+								Whether you have questions, need assistance, or simply want to chat about our
+								sustainable solutions, our friendly team is here to help. Let's embark on this
+								journey towards a greener world together.
+							</p>
+							<span class="d-block text-success fw-medium  ">+234(0)8037380109,
+								+234(0)7081752638</span>
+						</div>
+						<div class="mb-3">
+							<h6 class="fs-5 text-success mb-1">Visit Us</h6>
+							<p class="mb-1">
+								Our doors are open at Nordatech Energy, where you can explore our range of
+								eco-friendly products and learn more about our sustainable initiatives.
+							</p>
+							<span class="d-block text-success fw-medium  ">4th Floor, Lanre Shittu Motors
+								Building, Plot 1504, Shehu Yaradua Way, Mabushi, Abuja.</span>
+						</div>
+						<div class="mb-3">
+							<h6 class="fs-5 text-success mb-1">Email Us</h6>
+							<p class="mb-1">
+								We're excited to hear from you and discuss how we can collaborate to make a
+								positive impact on the environment.
+							</p>
+							<span class="d-block text-success fw-medium  ">info@nordatech.com.ng</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!----------------------- FAQ  --------------------->
+
+		<section class="py-5 bg-body-secondary  mb-5  ">
+			<div class="container">
+				<h2 class="text-center text-primary  mb-3">FAQs</h2>
+				<div class="row py-4 justify-content-center  gap-4 gap-md-0">
+					<div class="col-md-6 px-md-5">
+						<h1 class="text-primary fs-2">Frequently asked questions</h1>
+						<p class="text-primary ">
+							Welcome to our FAQS section, where we address common queries about our eco-conscious company
+							and its commitment to sustainability. If you have questions that aren't covered here, please
+							feel free to get in touch with us.
+						</p>
+					</div>
+					<div class="col-md-6 px-md-5">
+						<div class="accordion accordion-flush" id="accordionFlushExample">
+
+							<!---------------- FAQ 1  ------------->
+
+							<div class="accordion-item bg-body-secondary  text-primary ">
+								<p class="accordion-header" id="flush-headingOne">
+									<button
+										class="accordion-button collapsed bg-body-secondary  text-primary fw-medium "
+										type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+										aria-expanded="false" aria-controls="flush-collapseOne">
+										1. What does your company specialize in?
+									</button>
+								</p>
+								<div id="flush-collapseOne" class="accordion-collapse collapse"
+									aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+									<div class="accordion-body">NordaTech Energy specializes in a wide range of
+										services, including well testing, drilling fluids, project management, facility
+										management, IT solutions, consulting, reservoir management, research and
+										development, quality management, construction, and procurement.
+									</div>
+								</div>
+
+								<!-------------- FAQ 2  ----------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header  " id="flush-headingTwo">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+											aria-expanded="false" aria-controls="flush-collapseTwo">
+											2. Are your products truly sustainable?
+										</button>
+									</p>
+									<div id="flush-collapseTwo" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">
+											Yes, our products are designed with a strong focus on sustainability,
+											integrating environmental considerations and efficient practices across our
+											services.
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 3  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingThree">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse"
+											data-bs-target="#flush-collapseThree" aria-expanded="false"
+											aria-controls="flush-collapseThree">
+											3. How do you support environmental causes?
+										</button>
+									</p>
+									<div id="flush-collapseThree" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">
+											We actively support environmental causes by adhering to strict environmental
+											impact assessment standards, promoting green practices, and engaging in
+											research and development for alternative drilling additives, carbon
+											management, GHG emissions accounting, and renewable energy solutions.
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 4  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingFour">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
+											aria-expanded="false" aria-controls="flush-collapseFour">
+											4. Can I get involved with your company's mission?
+										</button>
+									</p>
+									<div id="flush-collapseFour" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">Absolutely! If you're passionate about sustainable
+											energy and innovative solutions, NordaTech Energy welcomes individuals who
+											share our vision. Feel free to explore opportunities for collaboration, job
+											openings, or partnerships that align with our mission. Let's make a positive
+											impact together!
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 5  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingTFive">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse"
+											data-bs-target="#flush-collapseTFive" aria-expanded="false"
+											aria-controls="flush-collapseTFive">
+											5. Do you offer bulk purchasing for businesses?
+										</button>
+									</p>
+									<div id="flush-collapseTFive" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingTFive" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">Definitely! We provide comprehensive procurement
+											services for businesses in the oil and gas sector, managing the entire
+											supply chain process from contracts to supplier selection. Feel free to
+											connect with us to discuss bulk purchasing options that meet your business
+											needs.
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 6  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingSix">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix"
+											aria-expanded="false" aria-controls="flush-collapseSix">
+											6. How do I place an order?
+										</button>
+									</p>
+									<div id="flush-collapseSix" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">To place an order or inquire about our services, you
+											can reach out to our team through our website's contact form or contact our
+											customer service directly via phone or email. We're here to assist you every
+											step of the way!
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 7  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingSeven">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse"
+											data-bs-target="#flush-collapseSeven" aria-expanded="false"
+											aria-controls="flush-collapseSeven">
+											7. What is your return policy?
+										</button>
+									</p>
+									<div id="flush-collapseSeven" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">Our return policy varies based on the specific
+											services and products we offer. Please contact our customer service for
+											detailed information about our return policy, as it may differ depending on
+											the nature of the service or product. We're here to ensure your
+											satisfaction!
+										</div>
+									</div>
+								</div>
+
+								<!---------- FAQ 8  -------------->
+
+								<div class="accordion-item bg-body-secondary  text-primary ">
+									<p class="accordion-header" id="flush-headingEight">
+										<button
+											class="accordion-button collapsed bg-body-secondary  text-primary fw-medium"
+											type="button" data-bs-toggle="collapse"
+											data-bs-target="#flush-collapseEight" aria-expanded="false"
+											aria-controls="flush-collapseEight">
+											8. Are your packaging materials eco-friendly?
+										</button>
+									</p>
+									<div id="flush-collapseEight" class="accordion-collapse collapse"
+										aria-labelledby="flush-headingEight" data-bs-parent="#accordionFlushExample">
+										<div class="accordion-body">Yes, we are committed to environmental stewardship.
+											We prioritize using eco-friendly packaging materials wherever possible to
+											minimize our ecological footprint and contribute to a sustainable future.
+
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+		</section>
+
+		<!------------- Clients and Partners  ------------>
+
+
+		<section class="clients py-5">
+			<div class="bg-body-secondary  py-5 rounded-6">
+				<div class="container">
+					<h2 class="text-center text-success mb-5">
+						OUR CLIENTS AND PARTNERS
+					</h2>
+					<div class="row py-4 justify-content-center align-items-center  gap-5 gap-md-4">
+						<div class="col-md-2 px-md-2 pb-md-5 ">
+							<img src="./img/intelbox.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2  px-md-2 pb-md-5">
+							<img src="./img/fleissen.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/vision.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/nnpc.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/natquest.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/naseni.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/slb.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/corelab.png" alt="intelbox" class="w-100 " />
+						</div>
+						<div class="col-md-2 px-md-2 pb-md-5">
+							<img src="./img/dit.png" alt="intelbox" class="w-100 " />
+						</div>
+					</div>
+				</div>
+		</section>
+
+	</main>
+	<script type="module" src="/js/main.js"></script>
+</body>
+
 </html>
