solving issues on about page

--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,10 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nordatech.com.ng | About</title>
+
+  <!-- Required Bootstrap CSS cdn is here-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -123,113 +127,119 @@
           </div>
         </div>
 
-        <div class="row py-4 justify-content-center gap-4 gap-md-0">
-          <div class="col-md-4 px-md-3">
-            <div class="bg-secondary h-100 p-4 rounded-4 text-center">
-              <h5 class="text-center text-success mb-4">HSE POLICY</h5>
-              <p>
-                Safety is our number one priority and as such, we make it a
-                company culture to promote safe practices at corporate and
-                individual levels. This is in order to safeguard human and
-                infrastructural integrity thus establishing an "incident free"
-                workplace. Environmental issues are managed to conform to
-                environmental impat assessment standards.
-              </p>
+        <div class="row py-4 gap-4 gap-md-0">
+          <div class="col-md-4">
+            <div class="card border-0 bg-body-secondary rounded-4 h-100">
+              <div class="card-body">
+                <h5 class="text-center card-title  text-success ">HSE POLICY</h5>
+                <p class="card-text text-center ">
+                  Safety is our number one priority and as such, we make it a
+                  company culture to promote safe practices at corporate and
+                  individual levels. This is in order to safeguard human and
+                  infrastructural integrity thus establishing an "incident free"
+                  workplace. Environmental issues are managed to conform to
+                  environmental impat assessment standards.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-md-4 px-md-3">
-            <div class="bg-secondary h-100 p-4 rounded-4 text-center">
-              <h5 class="text-center text-success mb-4">OUR MISSION</h5>
-              <p>
-                To provide consistent and concise professional services using
-                the best network and resources to enable a pathway for
-                effective synergistic processes for business development and
-                providing conducive environment for our clients to thrive in
-                the energy sector.
-              </p>
+          <div class="col-md-4">
+            <div class="card border-0 bg-body-secondary rounded-4 h-100">
+              <div class="card-body">
+                <h5 class="text-center card-title  text-success ">OUR MISSION</h5>
+                <p class="card-text text-center ">
+                  To provide consistent and concise professional services using
+                  the best network and resources to enable a pathway for
+                  effective synergistic processes for business development and
+                  providing conducive environment for our clients to thrive in
+                  the energy sector.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-md-4 px-md-3">
-            <div class="bg-secondary h-100 p-4 rounded-4 text-center">
-              <h5 class="text-center text-success mb-4">OUR VISION</h5>
-              <p>
-                To become the premier Nigerian company sought after for
-                proffering quick and easy solutions to engineering challenges
-                without compromising professional standards.
-              </p>
+          <div class="col-md-4">
+            <div class="card border-0 bg-body-secondary rounded-4 h-100">
+              <div class="card-body">
+                <h5 class="text-center card-title  text-success ">OUR VISSION</h5>
+                <p class="card-text text-center ">
+                  To become the premier Nigerian company sought after for
+                  proffering quick and easy solutions to engineering challenges
+                  without compromising professional standards.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
     </section>
 
-    <section class="clients py-5 bg-secondary rounded-6">
+    <section class="clients py-5 bg-body-secondary rounded-6">
       <div class="container">
         <h2 class="text-center text-success mb-5">
           OUR CLIENTS AND PARTNERS
         </h2>
-        <div class="row py-4 justify-content-center align-items-center  gap-5 gap-md-4">
-          <div class="col-md-2 px-md-2 pb-md-5 ">
-            <img src="./img/intelbox.png" alt="intelbox" class="w-100 " />
+        <div class="row py-4 justify-content-center align-items-center gap-5 gap-md-4">
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/intelbox.png" alt="intelbox" class="w-100" />
           </div>
           <div class="col-md-2  px-md-2 pb-md-5">
-            <img src="./img/fleissen.png" alt="intelbox" class="w-100 " />
+            <img src="./img/fleissen.png" alt="fleissen" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/vision.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/vision.png" alt="vision" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/nnpc.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/nnpc.png" alt="nnpc" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/natquest.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/natquest.png" alt="natquest" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/naseni.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/naseni.png" alt="naseni" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/slb.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/slb.png" alt="slb" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/corelab.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/corelab.png" alt="corelab" class="w-100" />
           </div>
-          <div class="col-md-2 px-md-2 pb-md-5">
-            <img src="./img/dit.png" alt="intelbox" class="w-100 " />
+          <div class="col-md-2  px-md-2 pb-md-5">
+            <img src="./img/dit.png" alt="dit" class="w-100" />
           </div>
         </div>
+      </div>
     </section>
 
     <section class="contact py-5">
       <div class="container py-5">
-        <div class="row py-4 justify-content-center align-items-center gap-4 gap-md-0">
-          <div class="col-md-5 px-md-5">
-            <img
-              src="https://i.ibb.co/QYQLxGD/african-american-woman-works-call-center-operator-customer-service-agent-wearing-microphone-headsets.jpg"
-              alt="african-american-woman-works-call-center-operator-customer-service-agent-wearing-microphone-headsets"
-              class="w-100 rounded-6 " />
+        <div class="row py-4 align-items-center gap-4 gap-md-0">
+          <div class="col-md-6 px-md-4">
+            <img src="./img/woman.png" alt="woman" class="w-100 rounded-6 " />
           </div>
-          <div class="col-md-6 px-md-5 ">
-            <p>Feel free to reach out to use uing the contact information. Your inquiries are important to us, and we're
-              here to assist you in any way we can.</p>
-            <form class="bg-secondary p-5 rounded-5 shadow d-flex flex-column ">
+          <div class="col-md-6 px-md-4">
+            <p>
+              Feel free to reach out to use uing the contact information. Your
+              inquiries are important to us, and we're here to assist you in
+              any way we can.
+            </p>
+            <form class="bg-body-secondary py-5 px-3  rounded-5 shadow d-flex flex-column">
               <div class="mb-3">
                 <label for="name" class="form-label label-text">Name</label>
-                <input type="text" class="input-box form-control border-0" id="name" name="name" required>
+                <input type="text" class="input-box form-control border-0" id="name" name="name" required />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label label-text">Email</label>
-                <input type="email" class="input-box form-control" id="email" name="email" required>
+                <input type="email" class="input-box form-control" id="email" name="email" required />
               </div>
               <div class="mb-3">
                 <label for="message" class="form-label label-text">Message</label>
-                <input type="text" class="input-box form-control" id="message" name="message" required>
+                <input type="text" class="input-box form-control" id="message" name="message" required />
               </div>
-              <button class="btn btn-success-alt mx-auto  px-5 my-2">Submit</button>
+              <button class="btn btn-success-alt mx-auto px-5 my-2">
+                Submit
+              </button>
             </form>
           </div>
         </div>
       </div>
-
     </section>
   </main>
   <script type="module" src="/js/main.js"></script>
