--- a/src/index.html
+++ b/src/index.html
@@ -141,8 +141,8 @@
 					</div>
 				</div>
 			</section>
-			<footer class="text-white">
-				<div class="container py-5">
+            <footer class="text-white">
+				<div class="footer-overlay container py-5">
 					<div class="container">
 						<div class="row">
 						  <div class="col-lg-6">
