--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 			</section>
-            <footer class="text-white">
+            <footer class="footer text-white">
 				<div class="footer-overlay container py-5">
 					<div class="container">
 						<div class="row">
@@ -154,6 +154,11 @@
 										4th Floor, Lanre Shittu Motors Building,<br>
 										Plot 1504, Shehu Yaradua Way, Mabushi, Abuja.
 									  </p>
+								</div>
+								<div>
+									<p class="email">
+										info@nordatech.com.ng
+									</p>
 								</div>
 								<div>
 									<p class="phone">
